--- a/src/main/resources/static/customer_orders/css/list.css
+++ b/src/main/resources/static/customer_orders/css/list.css
@@ -1,15 +1,30 @@
-* { box-sizing: border-box; margin: 0; }
+* { box-sizing: border-box; margin: 0; user-select: none; }
 .wrap { margin: 0 auto; width: 1440px; background-color: #EBECF0; padding: 1px; }
 .filter_area { margin: 10px 10px 10px auto; width: 1186px; height: 100%; background-color: white; border-radius: 20px; padding: 20px 26px; }
+.data_select_area > div { display: flex; }
 
+.checkbox_area { width: 30px; }
 .content_title_area { padding-bottom: 12px; }
 .content_title { font-size: 18px; font-weight: bold; }
 .data_select_area, .order_status_area, .search_conditions_area { padding: 10px 20px; font-size: 16px; border-bottom: solid 1px #D8D8D8; }
 .filter_bar_area { margin-top: 13px; text-align: right; }
 .reset_btn { font-size: 18px; font-weight: bold; cursor: pointer; }
 
-.date_select_sizing { width: 140px; height: 40px; padding: 8px 10px; border-radius: 5px; font-size: 16px; }
-#start_date, #end_date { width: 200px; height: 40px; font-size: 14px; padding: 7px 9px; border-radius: 5px; }
+#date_select_sizing { width: 140px; height: 40px; padding: 0 10px; border-radius: 5px; font-size: 16px; }
+#start_date, #end_date { width: 200px; height: 40px; font-size: 14px; padding: 7px 9px; border-radius: 5px; border: solid 1px black; }
+.date_container { position: relative; margin-left: 10px; }
+.input_date_image { position: absolute; width: 19px; height: 22px; top: 50%; right: 20px; transform: translateY(-50%); }
+.date_container { cursor: pointer; }
+.period_area { margin-left: 10px; width: 220px; height: 40px; border: 1px solid black; box-sizing: content-box; border-radius: 4px; overflow: hidden; }
+.period_btn { font-size: 14px; font-weight: bold; color: white; background-color: #4777F6; width: 55px; height: 40px; cursor: pointer; border: none; padding: 0; }
+#search_select_sizing { width: 140px; height: 40px; padding: 0 10px; border-radius: 5px; font-size: 16px; }
+.filter_grid { display: flex; }
+.filter_label_area { height: 20px; padding: 10px 0; }
+.label_width { width: 100px; }
+.conditions_select_area { margin-left: 60px; }
+.search_area { position: relative; margin-left: 10px; }
+.search_img { position: absolute; top: 50%; right: 10px; transform: translateY(-50%); }
+#word { width: 300px; height: 40px; border: 1px solid black; border-radius: 5px; padding: 0 10px; }
 
 .content_area { margin: 10px 10px 10px auto; width: 1186px; background-color: white; border-radius: 20px; padding: 20px 26px; }
 #content_table > thead > tr > th { padding: 16.5px 0; border-top: solid 1px #D8D8D8; border-bottom: solid 1px #D8D8D8; font-size: 16px; font-weight: bold; background-color: #D8D8D8; }
@@ -20,4 +35,3 @@
 .dt-paging { margin-top: 20px; } 
 div.dt-paging ul { justify-content: center !important; }
 .total_list_cnt_area { padding-bottom: 14px; font-size: 16px; font-weight: bold; }
-
