--- a/src/main/resources/static/admin/customer_orders/css/list.css
+++ b/src/main/resources/static/admin/customer_orders/css/list.css
@@ -1,46 +1,199 @@
-* { box-sizing: border-box; margin: 0; user-select: none; }
-.wrap { margin: 0 auto; width: 1440px; background-color: #EBECF0; padding: 1px; }
-.filter_area { margin: 10px 10px 10px auto; width: 1186px; height: 100%; background-color: white; border-radius: 20px; padding: 20px 26px; }
-.data_select_area > div { display: flex; }
+table.dataTable tbody tr {
+    background-color: white !important;
+}
+.container {
+   display: flex;
+   flex-direction: column;
+   height: 100%; /* 전체 높이 */
+}
 
-.checkbox_area { width: 30px; }
-.content_title_area { padding-bottom: 12px; }
-.content_title { font-size: 18px; font-weight: bold; }
-.data_select_area, .order_status_area, .search_conditions_area { padding: 10px 20px; font-size: 16px; border-bottom: solid 1px #D8D8D8; }
-.filter_bar_area { margin-top: 13px; text-align: right; }
-.reset_btn { font-size: 18px; font-weight: bold; cursor: pointer; }
-.text_red { color: red; }
-.text_green { color: #10A142; }
+.filter_container {
+   background: #FFFFFF;
+   border-radius: 20px;
+   padding: 20px 26px;
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+   
+}
+
+.table-container {
+   margin-top : 20px;
+   height: 70%; /* 화면의 하단 70% */
+   background: #FFFFFF;
+   border-radius: 20px;
+   padding: 20px;
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+   overflow-y: auto; /* 테이블 내용이 넘칠 경우 스크롤 */
+}
+
+.header h1 {
+   font-weight: 700;
+   font-size: 18px;
+   line-height: 24px;
+   color: #000000;
+   margin-bottom: 20px;
+}
+
+.content {
+   display: flex;
+   flex-direction: column;
+   gap: 12px;
+}
+
+.search-filter, .search-bar-group {
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+}
+
+.filter-group, .search-bar-group {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   gap: 10px;
+   border-bottom: 1px solid #D8D8D8;
+   padding-bottom: 8px;
+}
+
+.label {
+   font-size: 16px;
+   line-height: 24px;
+   color: #000000;
+   margin-left: 40px;
+   margin-right: 60px;
+}
+
+.date-picker {
+   display: flex;
+   flex-direction: row;
+   gap: 10px;
+}
+
+.input-box {
+   display: flex;
+   align-items: center;
+   width: 210px;
+   height: 40px;
+   padding: 0 10px;
+   background: #FFFFFF;
+   border: 1px solid #C0C0C0;
+   border-radius: 5px;
+}
+
+.input-box .placeholder {
+   border: none;
+   height: 30px;
+   font-size: 14px;
+   color: #CCCCCC;
+}
+
+/*
+.date-option.active {
+    background-color: #4777F6;
+    color: #FFFFFF;
+    border: 1px solid #4777F6;
+    border-radius: 5px;
+}
+*/
 
 
-#date_select_box { width: 140px; height: 40px; padding: 0 10px; border-radius: 5px; font-size: 16px; }
-#start_date, #end_date { width: 200px; height: 40px; font-size: 14px; padding: 7px 9px; border-radius: 5px; border: solid 1px black; font-size: 16px; }
-.date_container { position: relative; margin-left: 10px; }
-.input_date_image { position: absolute; width: 19px; height: 22px; top: 50%; right: 20px; transform: translateY(-50%); }
-.date_container { cursor: pointer; }
-.period_area { margin-left: 10px; width: 220px; height: 40px; border: 1px solid #C0C0C0; box-sizing: content-box; border-radius: 4px; overflow: hidden; }
-.period_btn { font-size: 14px; font-weight: bold; color: white; background-color: #4777F6; width: 55px; height: 40px; cursor: pointer; border: none; padding: 0; }
-#search_select_sizing { width: 140px; height: 40px; padding: 0 10px; border-radius: 5px; font-size: 16px; }
-.filter_grid { display: flex; }
-.filter_label_area { height: 20px; padding: 10px 0; }
-.label_width { width: 100px; }
-.conditions_select_area { margin-left: 60px; }
-.search_area { position: relative; margin-left: 10px; }
-.search_img { position: absolute; top: 50%; right: 10px; transform: translateY(-50%); cursor: pointer; }
-#word { width: 300px; height: 40px; border: 1px solid black; border-radius: 5px; padding: 0 10px; font-size: 16px; }
-.order_num_link { color: black; text-decoration: underline; }
+.search-bar {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   width: 300px;
+   height: 40px;
+   padding: 0 10px;
+   background: #FFFFFF;
+   border: 1px solid #C0C0C0;
+   border-radius: 5px;
+}
 
-.content_area { margin: 10px 10px 10px auto; width: 1186px; background-color: white; border-radius: 20px; padding: 10px 26px 20px 26px; }
-#content_table > thead > tr > th { padding: 16.5px 0; border-top: solid 1px #D8D8D8; border-bottom: solid 1px #D8D8D8; font-size: 16px; font-weight: bold; background-color: #FAFAFA; }
-#content_table > tbody > tr > td { padding: 16.5px 0; border-bottom: solid 1px #D8D8D8; font-size: 14px; }
-.dt_data_center { text-align: center !important; }
-.dt_data_right { text-align: right !important; }
-.dt-column-order { text-align: right !important; }
-.dt-paging { margin-top: 20px; } 
-div.dt-paging ul { justify-content: center !important; }
-.total_list_cnt_area { display: flex; justify-content: space-between; padding: 7px 0; }
-.total_list_cnt_area > #total_list_cnt { font-size: 16px; font-weight: bold; line-height: 40px; }
-#delivery_request_btn { width: 80px; height: 40px; font-size: 16px; color: white; background-color: #4777F6; border: none; border-radius: 5px; cursor: pointer; }
+.input-group {
+   display: flex;
+   justify-content: space-between;
+   width: 100%;
+   align-items: center;
+}
 
+.input-group input {
+   border: none;
+   outline: none;
+   width: 100%;
+   font-size: 16px;
+   color: #000000;
+}
 
+.calendar-slash {
+   margin-top: 8px;
+}
 
+#reset-button {
+    cursor: pointer;
+}
+
+.stars {
+	font-size: 20px; /* 별 크기 조정 */
+	color: #4777F6;
+}
+
+.empty-stars {
+	font-size: 20px; /* 빈 별 크기 조정 */
+	color: lightgray; /* 빈 별 색상 */
+}
+
+#reviews td, #reviews th {
+	text-align: center; /* 텍스트 가운데 정렬 */
+	vertical-align: middle; /* 수직 가운데 정렬 */
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+/* 모달 스타일 추가 */
+.modal {
+	display: none; /* 초기에는 숨김 */
+	position: fixed;
+	z-index: 1000;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4); /* 블랙 w/ opacity */
+}
+
+.modal-content {
+	background-color: #fefefe;
+	margin: 15% auto; /* 상하 좌우 가운데 정렬 */
+	padding: 20px;
+	border: 1px solid #888;
+	width: 30%;
+	border-radius: 8px;
+}
+
+.modal-footer {
+	display: flex;
+	justify-content: flex-end;
+	padding-top: 10px;
+}
+
+.modal-footer .button {
+	margin-left: 5px;
+}
+
+/* Center the DataTable pagination controls */
+#reviews_wrapper>.dt-paging {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#member_wrapper>.dt-paging {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
