--- a/src/main/resources/templates/admin/customer_orders/orders_detail.html
+++ b/src/main/resources/templates/admin/customer_orders/orders_detail.html
@@ -10,28 +10,28 @@
 	</div>
 	<div>
 		<div>
-			<span>주문번호: [[${num}]]</span>
+			<span>주문번호: [[${detail.order_num}]]</span>
 		</div>
 		<div>
-			<span>주문자</span>
+			<span>주문자: [[${detail.member_name}]]</span>
 		</div>
 		<div>
 			<span>회원ID</span>
-			<span></span>
+			<span>[[${detail.member_id}]]</span>
 			<span>이메일</span>
-			<span></span>
+			<span>[[${detail.member_email}]]</span>
 		</div>		
 		<div>
 			<span>전화번호</span>
-			<span></span>
+			<span>[[${detail.member_phoneno}]]</span>
 		</div>		
 		<div>
 			<span>배송지</span>
-			<span></span>
+			<span>[[${detail.order_addr}]] [[${detail.order_addr_detail}]]</span>
 		</div>		
 		<div>
 			<span>출입방법</span>
-			<span></span>
+			<span>[[${detail.common_ent_pw}]]</span>
 		</div>		
 	</div>
 	<div>
@@ -40,12 +40,12 @@
 		</div>
 		<div>
 			<span>회수지</span>
-			<span></span>
+			<span>[[${detail.retrieve_addr}]] [[${detail.retrieve_addr_detail}]]</span>
 		</div>
 	</div>
 	<div>
 		<div>
-			<span>총 5건</span>
+			<span>총 건</span>
 			<div>
 				<select>
 					<option value="">취소완료</option>
@@ -69,18 +69,18 @@
 				<span>구매금액</span>
 				<span>주문상태</span>
 			</div>
-			<div>
+			<div th:each="info : ${detailList}">
 				<span><input type="checkbox"/></span>
 				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
+				<span th:text="${info.book_name}"></span>
+				<span th:text="${info.book_isbn}"></span>
+				<span th:text="${#numbers.formatInteger(info.order_detail_price, 0, 'COMMA')}"></span>
+				<span th:text="${info.order_detail_qty}"></span>
+				<span th:text="${#numbers.formatInteger(info.order_price_sum, 0, 'COMMA')}"></span>
+				<span th:text="${info.order_detail_status}"></span>
 			</div>
 			<div>
-				<span>총 구매금액: </span>
+				<span th:text="'총 금액: ' + ${#numbers.formatInteger(detail.order_price_total, 0, 'COMMA')} + '원'"></span>
 			</div>
 		</div>
 	</div>
